--- a/desafios/desafio06/index.html
+++ b/desafios/desafio06/index.html
@@ -19,5 +19,6 @@
         <li><abbr title="Use a tag &lt;em&gt;">Itálico</abbr></li>
         <li><abbr title="Use a tag &lt;q&gt;">Citação</abbr></li>
     </ul>
+    <p>Esses são apenas alguns comandos, se quiser ver mais sobre, <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML/Element" target="_blank">visite a documentação original do HTML5.</a></p>
 </body>
 </html>
