--- a/exercicios/ex22/imagens/fundo06.html
+++ b/exercicios/ex22/imagens/fundo06.html
@@ -4,19 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>a</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
-            background-color: black;
+            /* background-color: black;
             background-image: url("wallpaper002.jpg");
             background-repeat: no-repeat;
             background-position: center top;
+            background-size: cover;
+            background-attachment: fixed; */
+
+            background: black url("wallpaper002.jpg") center center no-repeat fixed;
             background-size: cover;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -29,6 +33,12 @@
     <main>
         <h1>Teste de imagem de fundo</h1>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque temporibus quidem quaerat eius iste consequuntur illum doloremque ea magnam, soluta praesentium nulla dolor enim eum odit facere impedit ullam perferendis! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus sapiente suscipit iste magni, quam et, mollitia cupiditate at ex iusto beatae maiores fugit totam aspernatur quidem? Accusamus molestias quaerat accusantium? Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis numquam eveniet laborum impedit porro magni? Ea, asperiores ducimus alias eligendi dolorum atque distinctio. Voluptate a voluptates pariatur iure aperiam voluptatum.</p>
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit ut ex ipsa vitae cumque, aut porro maxime corporis eveniet, nemo vel sapiente cupiditate explicabo aperiam a aspernatur ullam blanditiis asperiores? Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis perferendis veritatis aliquid porro odio quam provident quia sed nulla? Ipsa voluptatibus quis aliquid expedita minus ea aut mollitia aspernatur nobis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto voluptatum ex iure expedita et ullam accusantium. Voluptatum distinctio fuga, necessitatibus, aliquid veritatis laudantium voluptates labore et debitis, illum suscipit! Maxime!</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur cupiditate iste vitae. Hic placeat necessitatibus corrupti earum sed porro inventore eaque, tempora ex et rem ullam sequi, id nostrum itaque! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis corrupti cumque harum nemo voluptate quis sed consequuntur earum, voluptatibus quod ab, repudiandae eius modi excepturi soluta expedita omnis sapiente mollitia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex velit totam tempora possimus fuga harum minus maxime voluptate. Debitis, laborum? Amet neque dolorem perspiciatis eius doloribus aut impedit aliquam voluptate?</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In vel cumque, animi exercitationem officia odio autem voluptas. Ab, numquam, quae explicabo itaque harum ut, necessitatibus eaque exercitationem iure natus voluptas? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi illo deserunt, numquam dolorum eius esse qui veritatis. Modi natus, animi est fugit, similique dignissimos asperiores quod ratione excepturi quas error? Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque quas, omnis ad sint aliquam, eum reprehenderit distinctio consequuntur quam nihil facere minima ea quia provident nemo sunt iste animi quidem?</p>
     </main>
 </body>
 </html>
