--- a/exercicios/ex24/iframe.html
+++ b/exercicios/ex24/iframe.html
@@ -10,9 +10,15 @@
     <h1>Testando o uso de um iframe</h1>
     <p>Acessando o site do 
         
-        <iframe src="https://www.cursoemvideo.com" frameborder="0"></iframe>
+        <iframe src="https://www.cursoemvideo.com" frameborder="0" height="500px">
+            <a href="https://www.cursoemvideo.com">CursoemVideo</a>
+        </iframe>
+
         para aprender a programar.</p>
 
-        <p>O site do <iframe src="https://www.google.com.br" frameborder="0"></iframe> também é muito legal.</p>
+        <p>O repositório do Guanabara no<iframe src="https://gustavoguanabara.github.io" frameborder="0" height="500px" width="500px">
+            <a href="https://gustavoguanabara.github.io"> GitHub</a>
+        </iframe> 
+        também é muito legal.</p>
 </body>
 </html>
